# morning-brief

./: .gitignore  README.md  base_plan.yaml  pyproject.toml  pytest.ini
brief/: bins.py  calendar_feed.py  config.py  inbox.py  llm.py  mailer.py  morning.py  plan.py  reset.py  state.py  todos.py
systemd/: brief-inbox.service  brief-inbox.timer  brief-morning.service  brief-morning.timer  brief-reset.service  brief-reset.timer
tests/: conftest.py  test_bins.py  test_calendar_feed.py  test_llm_live.py  test_mail_live.py  test_morning.py  test_plan.py  test_state.py  test_todos.py  test_whitelist.py
